Fix; Modification du bg du title Modification de la hauteur de l'icone du switch en version mobile Maj : temporaire bug

--- a/src/components/Boxinfos/Boxinfos.module.scss
+++ b/src/components/Boxinfos/Boxinfos.module.scss
@@ -74,10 +74,6 @@
 
     &--dark{
         .container{
-            &__title{
-                    background: url('../../assets/img/bg_dark_title.webp');
-                    background-size: cover;
-            }
 
             &__technologies{
      
@@ -105,11 +101,6 @@
 
     &--light{
         .container{
-            &__title{
-                    background: url('../../assets/img/bg_light_header.webp');
-                    background-size: cover;
-            }
-
             &__sources{
     
                 button{
