--- a/src/components/Switch/Switch.module.scss
+++ b/src/components/Switch/Switch.module.scss
@@ -16,7 +16,7 @@
         height: 18px;
     }
 }
-//test
+
 input{
     opacity: 0;
     width: 0;
@@ -70,7 +70,8 @@ input{
             right:9px;
 
             @media screen and (max-width: variables.$breakpoint-mobile) {
-                right:7px
+                right:7px;
+                top: 4.7px;
             }
         }
     }
@@ -89,10 +90,6 @@ input{
         transform: translateX(0px);
     }
 
-    .test::before{
-        animation:test 500ms
-    }
-
     &--light{
         background-color: #1c76d3;
 
@@ -107,15 +104,5 @@ input{
 
     &--dark{
         background-color: white;
-    }
-}
-
-@keyframes test{
-    from,
-    to{
-        transform: translateX(0px); 
-    }
-    50% {
-         transform: translateX(25px);
     }
 }
